--- a/main.tex
+++ b/main.tex
@@ -11,19 +11,6 @@
 % Define custom commands, if needed
 \renewcommand{\emph}[1]{{\bfseries\color{accentcolor}#1}}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Personal information
-%
-% For contacts and other info, you can use \infoGeneric{<icon>}{<text>}[<link>]
-% to add a line of information, or one of the following shortcuts in the form
-% \info<Shortcut>{<text>}[<link>]:
-%
-% \infoEmail          \infoDate           \infoLinkedin       \infoBook
-% \infoPhone          \infoPlace          \infoGithub         \infoAuthor
-% \infoAddress        \infoLink           \infoInstagram      \infoTools
-% \infoBirthday       \infoHomepage       \infoFlickr
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 % First name, last name, and optional pronouns
 \name{Sadman}{Sakib}[He/Him]
 
@@ -36,35 +23,14 @@
     \infoAddress{Kalibari, Thakurgaon}
     \infoEmail{evan30102001flair@gmail.com}[mailto:evan30102001flair@gmail.com]
     \infoHomepage{myWebGame}[https://sadman30102001sakib.github.io/crossRoad]
-    \infoLinkedin{myLinkedIn}[https://www.linkedin.com/in/sadman-sakib-32695124a/]
-    \infoGithub{myGithub}[https://github.com/SADMAN30102001SAKIB]
+    \infoLinkedin{www.linkedin.com/in/sadman-sakib-32695124a}[https://www.linkedin.com/in/sadman-sakib-32695124a/]
+    \infoGithub{github.com/SADMAN30102001SAKIB}[https://github.com/SADMAN30102001SAKIB]
 }
 
 % Tag line
 \tagline{
     My name is Clio Sadman Sakib I am a \emph{MERN Stack developer} with experience on \emph{Front-End, Back-End and DevOps}. I make sure the responsiveness and the security of a web app.
 }
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Main pane
-%
-% Each section of the main pane is enclosed within an environment of the form
-% \begin{mainsection}{<section title>} ... \end{mainsection}
-%
-% Available commands:
-%
-% \entryJob{<title>}[<descr>]{<location>}{<date>}
-% \entryPub{<title>}[<descr>]{<authors>}{<journal/conference>}{<DOI/link>}
-% \entrySkills[<title>]{<list of skills>}
-% \entryTags[<title>]{<list of tags>}
-% \entryGeneric{<title>}[<descr>][<info>][<info>][<info>]
-%
-% Skill and tag commands:
-%
-% \skill{<name>}{<score>}
-% \simpleskill[<icon>]{<name>}
-% \boxedtag[<icon>]{<name>}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
 
@@ -83,48 +49,48 @@
         \entryGeneric
             {flappyBird Web Game}
             [\infoFlickr
-                {flappyBirdGame}
+                {sadman30102001sakib.github.io/flappyBird}
                 [https://sadman30102001sakib.github.io/flappyBird]]
         \entryGeneric
             {snakeMania Web Game}
             [\infoFlickr
-                {snakeManiaGame}
+                {sadman30102001sakib.github.io/snakeMania}
                 [https://sadman30102001sakib.github.io/snakeMania]]
         \entryGeneric
             {rescueDoggo Web Game}
             [\infoFlickr
-                {rescueDoggoGame}
+                {sadman30102001sakib.github.io/rescueDoggo}
                 [https://sadman30102001sakib.github.io/rescueDoggo]]
         \entryGeneric
             {crossRoad Web Game}
             [\infoFlickr
-                {crossRoadGame}
+                {sadman30102001sakib.github.io/crossRoad}
                 [https://sadman30102001sakib.github.io/crossRoad]]
         \entryGeneric
             {ESP Web Server}
             [\infoFlickr
-                {ESP Web Server}
+                {SADMAN30102001SAKIB/ESP-Server-Web-App}
                 [https://github.com/SADMAN30102001SAKIB/ESP-Server-Web-App]]
         \entryGeneric
             {My ChatGPT}
             [\infoFlickr
-                {sadmanGPT}
+                {SADMAN30102001SAKIB/sadmanGPT}
                 [https://github.com/SADMAN30102001SAKIB/sadmanGPT]]
         \entryGeneric
             {My Web Browser}
             [\infoFlickr
-                {sadmanWebBrowser}
+                {   SADMAN30102001SAKIB/sadmanWebBrowser}
                 [https://github.com/SADMAN30102001SAKIB/sadmanWebBrowser]]
         \entryGeneric
             {Spotify Clone}
             [\infoFlickr
-                {Spotify-Clone}
+                {SADMAN30102001SAKIB/Spotify-Clone}
                 [https://github.com/SADMAN30102001SAKIB/Spotify-Clone]]
     \end{mainsection}
 
     \begin{mainsection}{Work experience}
         \entryJob
-            {Made Personal Projects}
+            {Made Personal Projects \& Open Souce Contribution}
             [Mostly in Web Technology]
             {Home}
             {December 2019 -- present}
