--- a/main.tex
+++ b/main.tex
@@ -22,14 +22,13 @@
     \infoBirthday{30/10/2001}
     \infoAddress{Kalibari, Thakurgaon}
     \infoEmail{evan30102001flair@gmail.com}[mailto:evan30102001flair@gmail.com]
-    \infoHomepage{myWebGame}[https://sadman30102001sakib.github.io/crossRoad]
     \infoLinkedin{www.linkedin.com/in/sadman-sakib-32695124a}[https://www.linkedin.com/in/sadman-sakib-32695124a/]
     \infoGithub{github.com/SADMAN30102001SAKIB}[https://github.com/SADMAN30102001SAKIB]
 }
 
 % Tag line
 \tagline{
-    My name is Clio Sadman Sakib I am a \emph{MERN Stack developer} with experience on \emph{Front-End, Back-End and DevOps}. I make sure the responsiveness and the security of a web app.
+    My name is Sadman Sakib I am a \emph{MERN Stack developer} with experience on \emph{Front-End, Back-End and DevOps}. I make sure the responsiveness and the security of a web app.
 }
 
 \begin{document}
