--- a/main.tex
+++ b/main.tex
@@ -124,7 +124,7 @@
             \simpleskill{Spinnaker}
             \simpleskill{Semgrep}
             \simpleskill{AWS \& Firebase}
-            \simpleskill{Digital Ocean \& Linode}
+            \simpleskill{Digital Ocean, Vercel \& Linode}
             \simpleskill{Slack}
             \simpleskill{Arduino IDE}
         }
